# GLCube

./: .gitignore  CMakeLists.txt  GLCube.sln  README.md
GLCube/: GLCube.vcxproj  GLCube.vcxproj.filters
GLCube/Assets/Shaders/: shader.frag
GLCube/src/: Camera.cpp  Camera.h  Common.h  Shader.cpp  Shader.h  glad.c  main.cpp
lib/: glfw3.lib
x64/Debug/Shaders/: shader.frag  shader.vert
